--- a/src/app/reservation-form/reservation-form.component.html
+++ b/src/app/reservation-form/reservation-form.component.html
@@ -1,39 +1,51 @@
+<app-home></app-home>
+
 <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
-    <div>
-        <div *ngIf="reservationForm.get('checkInDate')?.invalid && reservationForm.get('checkInDate')?.touched">
-            Check-in Date is required
-        </div>
-        <label>Check-in Date:</label>
-        <input type="date" formControlName="checkInDate">
+    <div class="row mb-3">
+      <div class="col">
+        <label class="form-label">Check-in Date:</label>
+        <input class="form-control" type="date" formControlName="checkInDate">
+        <small class="text-danger" *ngIf="reservationForm.get('checkInDate')?.invalid && reservationForm.get('checkInDate')?.touched">
+          Check-in Date is required
+        </small>
+      </div>
+
+      <div class="col">
+        <label class="form-label">Check-Out Date:</label>
+        <input  class="form-control" type="date" formControlName="checkOutDate">
+        <small class="text-danger" *ngIf="reservationForm.get('checkOutDate')?.invalid && reservationForm.get('checkOutDate')?.touched">
+          Check-Out Date is required
+        </small>
+      </div>
     </div>
-    <div>
-        <div *ngIf="reservationForm.get('checkOutDate')?.invalid && reservationForm.get('checkOutDate')?.touched">
-            Check-Out Date is required
-        </div>
-        <label>Check-Out Date:</label>
-        <input type="date" formControlName="checkOutDate">
+
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">Guest Name:</label>
+      <input  class="form-control" type="text" formControlName="guestName">
+      <small class="text-danger" *ngIf="reservationForm.get('guestName')?.invalid && reservationForm.get('guestName')?.touched">
+        Guest name is required
+      </small>
     </div>
-    <div>
-        <div *ngIf="reservationForm.get('guestName')?.invalid && reservationForm.get('guestName')?.touched">
-            Guest name is required
-        </div>
-        <label>Guest Name:</label>
-        <input type="text" formControlName="guestName">
+    <div class="col">
+      <label class="form-label">Guest Email:</label>
+      <input class="form-control" type="email" formControlName="guestEmail">
+      <small class="text-danger" *ngIf="reservationForm.get('guestEmail')?.invalid && reservationForm.get('guestEmail')?.touched">
+        Guest Email is required
+      </small>
     </div>
-    <div>
-        <div *ngIf="reservationForm.get('guestEmail')?.invalid && reservationForm.get('guestEmail')?.touched">
-            Guest Email is required
-        </div>
-        <label>Guest Email:</label>
-        <input type="email" formControlName="guestEmail">
+  </div>
+
+
+    <div class="row mb-3">
+      <div class="col-3">
+        <label class="form-label">Room Number:</label>
+        <input class="form-control" type="number" formControlName="roomNumber">
+        <small class="text-danger" *ngIf="reservationForm.get('roomNumber')?.invalid && reservationForm.get('roomNumber')?.touched">
+          Room number is required
+        </small>
+      </div>
     </div>
-    <div>
-        <div *ngIf="reservationForm.get('roomNumber')?.invalid && reservationForm.get('roomNumber')?.touched">
-            Room number is required
-        </div>
-        <label>Room Number:</label>
-        <input type="number" formControlName="roomNumber">
-    </div>
-    <button type="submit" [disabled]="reservationForm.invalid">Submit</button>
+    <button class="btn btn-primary" type="submit" [disabled]="reservationForm.invalid">Submit</button>
 </form>
 
