--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,14 +1,32 @@
-<h2>Reservation List</h2>
+<app-home></app-home>
+<h2 class="mt-5 mb-3">Reservation List</h2>
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>Guest Name</th>
+    <th>Guest Email</th>
+    <th>Room Number</th>
+    <th>Check-in Date</th>
+    <th>Check-out Date</th>
+    <th>Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let reservation of reservations">
+    <td>{{reservation.guestName}}</td>
+    <td>{{reservation.guestEmail}}</td>
+    <td>{{reservation.roomNumber}}</td>
+    <td>{{reservation.checkInDate}}</td>
+    <td>{{reservation.checkOutDate}}</td>
+    <td>
+      <button class="btn btn-sm btn-danger mx-1" (click)="deleteReservation(reservation.id)">Delete</button>
+      <button class="btn btn-sm btn-secondary mx-1" [routerLink]="['/edit',reservation.id]" >Edit</button>
+    </td>
+  </tr>
+  </tbody>
+</table>
 <ul *ngIf="reservations.length; else noReservation">
-  <li *ngFor="let reservation of reservations">
-    Guest: {{reservation.guestName}} <br>
-    Email: {{reservation.guestEmail}} <br>
-    Room: {{reservation.roomNumber}} <br>
-    Check-in Date: {{reservation.checkInDate}} <br>
-    Check-out Date: {{reservation.checkOutDate}} <br>
-    <button (click)="deleteReservation(reservation.id)">Delete</button>
-    <button [routerLink]="['/edit',reservation.id]" >Edit</button>
-  </li>
+
 </ul>
 
 <ng-template #noReservation>
